--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </article>
                 
                 <article class="6u 12u$(xsmall) work-item">
-                    <a target="_blank" href="images/new/green.png" class="image fit thumb"><img src="images/new/green.png" alt="" /></a>
+                    <a target="_blank" href="images/new/meesterproef.png" class="image fit thumb"><img src="images/new/meesterproef.png" alt="" /></a>
                     <h3>Ontwerpen 3 - (meesterproef)</h3>
                     <p>Beschrijving van dit vak.</p>
                     <ul class="actions small">
